--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -2,14 +2,25 @@
     ViewBag.Title = "App";
 
 
-    var rscMngr = ResourceMngr.Create(Html);
+    var obj = Html.ToJSonHtmlString(new
+    {
+        urlGetProfile = Url.Action("GetProfile", "ApiAccount"),
+        lbl_FName = Html.GetLabel("Lbl_FName"),
+        lbl_LName = Html.GetLabel("Lbl_LName"),
+        lbl_Email = Html.GetLabel("Lbl_Email"),
+        lbl_Usrnm = Html.GetLabel("Lbl_Usrnm"),
+        lbl_CntctNm = Html.GetLabel("Lbl_CntctNm"),
+        lbl_LckOut = Html.GetLabel("Lbl_LckOut"),
+
+        erMsg_InvldEmail = Html.GetMessage("ErMsg_InvldEmail")
+    });
 }
 
 
 @section css {
     <environment names="Development">
         <link rel="stylesheet" href="@Url.GetResPath("~/css/app/index.css", (string)ViewBag.WebRootPath)" />
-        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/main.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/home.css", (string)ViewBag.WebRootPath)" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="~/css/app/index.min.css" />
@@ -24,9 +35,19 @@
         <script src="~/lib/angular/angular.js"></script>
         <script src="~/lib/angular/angular-route.js"></script>
         <script src="@Url.GetResPath("~/js/app/index.js", (string)ViewBag.WebRootPath)"></script>
-        <script src="@Url.GetResPath("~/js/app/app-main.js", (string)ViewBag.WebRootPath)"></script>
+        <script src="@Url.GetResPath("~/js/app/app-mainmenu.js", (string)ViewBag.WebRootPath)"></script>
+
+        <script>
+            angular.module('app-mainmenu')
+                   .value('appProps', JSON.parse('@obj'));
+        </script>
+
         <script src="@Url.GetResPath("~/js/app/mainCtrlr.js", (string)ViewBag.WebRootPath)"></script>
+        <script src="@Url.GetResPath("~/js/app/homeCtrlr.js", (string)ViewBag.WebRootPath)"></script>
         <script src="@Url.GetResPath("~/js/app/account/profileCtrlr.js", (string)ViewBag.WebRootPath)"></script>
+        <script src="@Url.GetResPath("~/js/app/admin/usersCtrlr.js", (string)ViewBag.WebRootPath)"></script>
+        <script src="@Url.GetResPath("~/js/app/admin/clientsCtrlr.js", (string)ViewBag.WebRootPath)"></script>
+        <script src="@Url.GetResPath("~/js/app/admin/addressesCtrlr.js", (string)ViewBag.WebRootPath)"></script>
     </environment>
 
     <environment names="Staging,Production">
@@ -40,53 +61,84 @@
         </script>
 
         <script src="~/js/app/index.js" asp-append-version="true"></script>
-        <script src="~/js/app/app-main.min.js" asp-append-version="true"></script>
+        <script src="~/js/app/app-mainmenu.min.js" asp-append-version="true"></script>
+
+        <script>
+            angular.module('app-mainmenu')
+                   .value('appProps', JSON.parse('@obj'));
+        </script>
+
         <script src="~/js/app/mainCtrlr.min.js" asp-append-version="true"></script>
+        <script src="~/js/app/homeCtrlr.min.js" asp-append-version="true"></script>
         <script src="~/js/app/account/profileCtrlr.min.js" asp-append-version="true"></script>
+        <script src="~/js/app/admin/usersCtrlr.min.js" asp-append-version="true"></script>
+        <script src="~/js/app/admin/clientsCtrlr.min.js" asp-append-version="true"></script>
+        <script src="~/js/app/admin/addressesCtrlr.min.js" asp-append-version="true"></script>
     </environment>
+
+
 }
 
 
-<div ng-app="app-main">
+<div ng-app="app-mainmenu" class="show-on-load">
 
-    <div id="sideBar">
-        <div class="sb sb-lbls findme-color-bc-darker">
-            <ul>
-                <li><a href="#/Users"><span>@rscMngr.GetLabel("Lbl_Usrs")</span></a></li>
-                <li><a><span>@rscMngr.GetLabel("Lbl_Clnts")</span></a></li>
-                <li><a><span>@rscMngr.GetLabel("Lbl_Addresses")</span></a></li>
-            </ul>
-        </div>
+    <div ng-controller="mainCtrlr as vm">
 
-        <div class="sb sb-icons findme-color-bc-darker">
-            <ul>
-                <li><a href="#/Users"><div><span class="fa fa-users fa-2x"></span></div></a></li>
-                <li><a><div><span class="fa fa-vcard-o fa-2x"></span></div></a></li>
-                <li><a><div><span class="fa fa-address-book-o fa-2x"></span></div></a></li>
-            </ul>
-        </div>
-    </div>
+        <div id="sideBar">
+            <div class="sb sb-lbls findme-color-bc-darker">
+                <ul>
+                    <li><a href="#/users"><span>@Html.GetLabel("Lbl_Usrs")</span></a></li>
+                    <li><a href="#/clients"><span>@Html.GetLabel("Lbl_Clnts")</span></a></li>
+                    <li><a href="#/addresses"><span>@Html.GetLabel("Lbl_Addresses")</span></a></li>
+                </ul>
+            </div>
 
-
-    <div id="wrapper">
-
-        <div id="searchBar" class="findme-color-bc-lgray">
-            <div>
-                <button type="button" class="btn btn-burger findme-color-fc-white findme-color-bc-yellow">
-                    <span class="fa fa-bars fa-2x"></span>
-                </button>
-
-                <span class="search-ctrl">
-                    <span class="input-bg"><input type="search" /></span>
-
-                    <button type="button" class="btn btn-search findme-color-bc-pink findme-color-fc-white">
-                        <span class="fa fa-search fa-2x"></span>
-                    </button>
-                </span>
+            <div class="sb sb-icons findme-color-bc-darker">
+                <ul>
+                    <li><a href="#/users"><div><span class="fa fa-users fa-2x"></span></div></a></li>
+                    <li><a href="#/clients"><div><span class="fa fa-vcard-o fa-2x"></span></div></a></li>
+                    <li><a href="#/addresses"><div><span class="fa fa-address-book-o fa-2x"></span></div></a></li>
+                </ul>
             </div>
         </div>
 
-        <div ng-view></div>
+
+        <div id="wrapper">
+
+            <div id="searchBar" class="findme-color-bc-lgray">
+
+                <div class="col-md-6 col-sm-12">
+                    <button type="button" class="btn btn-burger findme-color-fc-white findme-color-bc-yellow">
+                        <span class="fa fa-bars fa-2x"></span>
+                    </button>
+
+                    <span class="search-ctrl">
+                        <span class="input-bg"><input type="search" /></span>
+
+                        <button type="button" class="btn btn-search findme-color-bc-pink findme-color-fc-white">
+                            <span class="fa fa-search fa-2x"></span>
+                        </button>
+                    </span>
+                </div>
+
+                <div class="tb col-md-6 col-sm-12">
+                    <button type="button" class="btn btn-tb refresh"><span class="fa fa-refresh fa-2x"></span></button>
+                    <button type="button" class="btn btn-tb add"><span class="fa fa-plus-circle fa-2x"></span></button>
+                    <button type="button" class="btn btn-tb save"><span class="fa fa-save fa-2x"></span></button>
+                </div>
+            </div>
+
+            <div class="main-ctrlr">
+
+                <div class="title-bar">
+                    <h4>{{vm.headerConfig.title}}</h4>
+                </div>
+
+
+                <div ng-view class="vw-container"></div>
+            </div>
+        </div>
+
     </div>
 
 </div>
