--- a/FindMe.Web.Bo/Views/Account/SignIn.cshtml
+++ b/FindMe.Web.Bo/Views/Account/SignIn.cshtml
@@ -1,8 +1,6 @@
 ﻿
 @{
     ViewBag.Title = "Sign In";
-
-    var rscMngr = ResourceMngr.Create(Html);
 }
 
 
@@ -30,7 +28,7 @@
 }
 
 <div id="signin" ng-app="app-signin" class="container">
-    <h2 class="findme-color-fc-pink">@rscMngr.GetLabel("Lbl_SignIn")</h2>
+    <h2 class="findme-color-fc-pink">@Html.GetLabel("Lbl_SignIn")</h2>
 
     <div ng-controller="signInCtrlr as vm">
 
@@ -47,31 +45,31 @@
 
                     <div class="form-group">
                         @*<label class="findme-color-fc-dark" for="username">@rscMngr.GetLabel("Lbl_EmailUsrnm")</label>*@
-                        <input type="text" class="form-control" id="userName" name="userName" placeholder="@rscMngr.GetLabel("Lbl_EmailUsrnm")" ng-model="vm.obj.userName" required ng-minlength="4" ng-disabled="vm.isBusy" />
-                        <span class="text-warning show-on-load" ng-show="signinform.userName.$error.required">@rscMngr.GetMessage("ErMsg_VldEmailOrUsrnmReq")</span>
-                        <span class="text-warning show-on-load" ng-show="signinform.userName.$error.minlength">@rscMngr.GetMessage("ErMsg_VldEmailOrUsrnmReq")</span>
+                        <input type="text" class="form-control" id="userName" name="userName" placeholder="@Html.GetLabel("Lbl_EmailUsrnm")" ng-model="vm.obj.userName" required ng-minlength="4" ng-disabled="vm.isBusy" />
+                        <span class="text-warning show-on-load" ng-show="signinform.userName.$touched && signinform.userName.$error.required">@Html.GetMessage("ErMsg_VldEmailOrUsrnmReq")</span>
+                        <span class="text-warning show-on-load" ng-show="signinform.userName.$touched && signinform.userName.$error.minlength">@Html.GetMessage("ErMsg_VldEmailOrUsrnmReq")</span>
                     </div>
 
                     <div class="form-group">
                         @*<label class="findme-color-fc-dark" for="password">@rscMngr.GetLabel("Lbl_Psswrd")</label>*@
-                        <input type="password" class="form-control" id="password" name="password" placeholder="@rscMngr.GetLabel("Lbl_Psswrd")" ng-model="vm.obj.password" required ng-disabled="vm.isBusy" />
+                        <input type="password" class="form-control" id="password" name="password" placeholder="@Html.GetLabel("Lbl_Psswrd")" ng-model="vm.obj.password" required ng-disabled="vm.isBusy" />
                         @*<span class="text-warning show-on-load" ng-show="signinform.password.$error.required">@rscMngr.GetMessage("ErMsg_PsswrdReq")</span>*@
                     </div>
 
                     <div class="form-group">
                         <div class="row">
 
-                            <span class="check-box remember col-md-4 col-sm-12" ng-disabled="vm.isBusy">
+                            <span class="check-box remember col-lg-4 col-md-12" ng-disabled="vm.isBusy">
                                 <input type="checkbox" value="None" id="remember" name="remember" ng-model="vm.obj.remember" />
                                 <label class="lbl-chkb" for="remember"></label>
 
                                 <label id="lblRemember" class="findme-color-fc-dark" for="remember">
-                                    &nbsp;@rscMngr.GetLabel("Lbl_RmbrMe")
+                                    &nbsp;@Html.GetLabel("Lbl_RmbrMe")
                                 </label>
                             </span>
 
-                            <div class="col-md-8 col-sm-12">
-                                <a asp-controller="Account" asp-action="ForgotPassword">@rscMngr.GetLabel("Lbl_FrgtPsswrd")</a>
+                            <div class="col-lg-8 col-md-12">
+                                <a asp-controller="Account" asp-action="ForgotPassword">@Html.GetLabel("Lbl_FrgtPsswrd")</a>
                             </div>
                         </div>
                     </div>
