--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -4,26 +4,33 @@
 
     var obj = Html.ToJSonHtmlString(new
     {
-        urlGetProfile = Url.Action("GetProfile", "ApiAccount"),
+        urlMngProfile = Url.Action("ManageProfile", "ApiAccount"),
         lbl_FName = Html.GetLabel("Lbl_FName"),
         lbl_LName = Html.GetLabel("Lbl_LName"),
         lbl_Email = Html.GetLabel("Lbl_Email"),
         lbl_Usrnm = Html.GetLabel("Lbl_Usrnm"),
         lbl_CntctNm = Html.GetLabel("Lbl_CntctNm"),
         lbl_LckOut = Html.GetLabel("Lbl_LckOut"),
+        lbl_Prfl = Html.GetLabel("Lbl_Prfl"),
 
-        erMsg_InvldEmail = Html.GetMessage("ErMsg_InvldEmail")
+        erMsg_InvldEmail = Html.GetMessage("ErMsg_InvldEmail"),
+        msg_RfrshPrfl = Html.GetMessage("Msg_RfrshPrfl"),
+        msg_SavePrfl = Html.GetMessage("Msg_SavePrfl")
     });
 }
 
 
 @section css {
     <environment names="Development">
-        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/index.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/wrapper.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/side-bar.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/search-bar.css", (string)ViewBag.WebRootPath)" />
         <link rel="stylesheet" href="@Url.GetResPath("~/css/app/home.css", (string)ViewBag.WebRootPath)" />
     </environment>
     <environment names="Staging,Production">
-        <link rel="stylesheet" href="~/css/app/index.min.css" />
+        <link rel="stylesheet" href="~/css/app/wrapper.min.css" />
+        <link rel="stylesheet" href="~/css/app/side-bar.min.css" />
+        <link rel="stylesheet" href="~/css/app/search-bar.min.css" />
         <link rel="stylesheet" href="~/css/app/main.min.css" />
     </environment>
 }
@@ -112,7 +119,7 @@
                         <span class="fa fa-bars fa-2x"></span>
                     </button>
 
-                    <span class="search-ctrl">
+                    <span class="search-ctrl clsp hidden">
                         <span class="input-bg"><input type="search" /></span>
 
                         <button type="button" class="btn btn-search findme-color-bc-pink findme-color-fc-white">
@@ -121,17 +128,17 @@
                     </span>
                 </div>
 
-                <div class="tb col-md-6 col-sm-12">
-                    <button type="button" class="btn btn-tb refresh"><span class="fa fa-refresh fa-2x"></span></button>
-                    <button type="button" class="btn btn-tb add"><span class="fa fa-plus-circle fa-2x"></span></button>
-                    <button type="button" class="btn btn-tb save"><span class="fa fa-save fa-2x"></span></button>
+                <div class="tb col-md-6 col-sm-12 clsp hidden">
+                    <button type="button" class="btn btn-tb refresh" ng-click="vm.headerConfig.tbBtnClickCallback('refresh')" data-toggle="tooltip" data-placement="top" title="" data-original-title="{{vm.headerConfig.refreshBtnTltp}}"><span class="fa fa-refresh fa-2x"></span></button>
+                    <button type="button" class="btn btn-tb add" ng-click="vm.headerConfig.tbBtnClickCallback('add')" data-toggle="tooltip" data-placement="top" title="" data-original-title="{{vm.headerConfig.addBtnTltp}}"><span class="fa fa-plus-circle fa-2x"></span></button>
+                    <button type="button" class="btn btn-tb save" ng-click="vm.headerConfig.tbBtnClickCallback('save')" data-toggle="tooltip" data-placement="top" title="" data-original-title="{{vm.headerConfig.saveBtnTltp}}"><span class="fa fa-save fa-2x"></span></button>
                 </div>
             </div>
 
             <div class="main-ctrlr">
 
                 <div class="title-bar">
-                    <h4>{{vm.headerConfig.title}}</h4>
+                    <h4 class="findme-color-fc-pink">{{vm.headerConfig.title}}</h4>
                 </div>
 
 
