--- a/FindMe.Web.Bo/wwwroot/css/site.css
+++ b/FindMe.Web.Bo/wwwroot/css/site.css
@@ -79,3 +79,20 @@ textarea {
 .navbar-toggle.btn-user {
     padding: 0;
 }
+
+
+.findme-lbl {
+    color: #1a1a1a;
+    /*border: 1px solid black;*/
+    border-radius: 5px;
+    padding: 2px 8px;
+    min-width: 280px;
+    -webkit-box-shadow: inset 1px 1px 3px 1px rgba(0, 0, 0,0.3);
+    -moz-box-shadow: inset 1px 1px 3px 1px rgba(0, 0, 0,0.3);
+    box-shadow: inset 1px 1px 3px 1px rgba(0, 0, 0,0.3);
+}
+
+    .findme-lbl.pink {
+        background-color: #E20E53;
+        color: #EDF1F8;
+    }
