--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -12,10 +12,13 @@
         lbl_CntctNm = Html.GetLabel("Lbl_CntctNm"),
         lbl_LckOut = Html.GetLabel("Lbl_LckOut"),
         lbl_Prfl = Html.GetLabel("Lbl_Prfl"),
+        lbl_ReSnd = Html.GetLabel("Lbl_ReSnd"),
+        lbl_CnclCnfrmtn = Html.GetLabel("Lbl_CnclCnfrmtn"),
 
         erMsg_InvldEmail = Html.GetMessage("ErMsg_InvldEmail"),
         msg_RfrshPrfl = Html.GetMessage("Msg_RfrshPrfl"),
-        msg_SavePrfl = Html.GetMessage("Msg_SavePrfl")
+        msg_SavePrfl = Html.GetMessage("Msg_SavePrfl"),
+        msg_WtngEmailCnfrmtn = Html.GetMessage("Msg_WtngEmailCnfrmtn")
     });
 }
 
@@ -26,12 +29,14 @@
         <link rel="stylesheet" href="@Url.GetResPath("~/css/app/side-bar.css", (string)ViewBag.WebRootPath)" />
         <link rel="stylesheet" href="@Url.GetResPath("~/css/app/search-bar.css", (string)ViewBag.WebRootPath)" />
         <link rel="stylesheet" href="@Url.GetResPath("~/css/app/home.css", (string)ViewBag.WebRootPath)" />
+        <link rel="stylesheet" href="@Url.GetResPath("~/css/app/account/profile.css", (string)ViewBag.WebRootPath)" />
     </environment>
     <environment names="Staging,Production">
         <link rel="stylesheet" href="~/css/app/wrapper.min.css" />
         <link rel="stylesheet" href="~/css/app/side-bar.min.css" />
         <link rel="stylesheet" href="~/css/app/search-bar.min.css" />
-        <link rel="stylesheet" href="~/css/app/main.min.css" />
+        <link rel="stylesheet" href="~/css/app/home.min.css" />
+        <link rel="stylesheet" href="~/css/app/account/profile.min.css" />
     </environment>
 }
 
