--- a/FindMe.Web.Bo/wwwroot/css/app/search-bar.css
+++ b/FindMe.Web.Bo/wwwroot/css/app/search-bar.css
@@ -90,6 +90,6 @@
         }
 
             #searchBar .tb .btn.btn-tb:hover {
-                color: #FECC00;
+                color: #FFCC00;
                 transition: color ease-in 200ms;
             }
