--- a/FindMe.Web.Bo/wwwroot/css/colors.css
+++ b/FindMe.Web.Bo/wwwroot/css/colors.css
@@ -21,7 +21,7 @@
 
 /* FindMe's Yellow Backgroundcolor */
 .findme-color-bc-yellow {
-    background-color: #FECC00 !important;
+    background-color: #FFCC00 !important;
 }
 
 /* FindMe's Light Gray Backgroundcolor */
@@ -47,7 +47,7 @@
 
 /* FindMe's Yellow forecolor */
 .findme-color-fc-yellow {
-    color: #FECC00 !important;
+    color: #FFCC00 !important;
 }
 
 /* FindMe's Light Gray forecolor */
