--- a/FindMe.Web.Bo/wwwroot/css/site.css
+++ b/FindMe.Web.Bo/wwwroot/css/site.css
@@ -95,3 +95,8 @@ textarea {
         background-color: #E20E53;
         color: #EDF1F8;
     }
+
+
+.btn {
+    text-transform: none !important;
+}
