--- a/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
+++ b/FindMe.Web.Bo/Views/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <title>@ViewBag.Title - @Html.GetLabel("Lbl_AppName") B.O</title>
 
     <environment names="Development">
-        <link href="~/lib/boostrap/css/bootstrap.min.css" rel="stylesheet" />
+        @*<link href="~/lib/boostrap/css/bootstrap.min.css" rel="stylesheet" />*@
         <link href="~/lib/bootstrap-themes/bootstrap-paper.min.css" rel="stylesheet" />
         <link href="~/lib/font-awesome/css/font-awesome.min.css" rel="stylesheet" />
         <link href="@Url.GetResPath("~/css/site.css", (string)ViewBag.WebRootPath)" rel="stylesheet" />
