--- a/FindMe.Web.Bo/Views/App/Index.cshtml
+++ b/FindMe.Web.Bo/Views/App/Index.cshtml
@@ -61,8 +61,11 @@
                             lbl_CnclCnfrmtn: '@Html.GetLabel("lbl_CnclCnfrmtn")',
                             lbl_Clnts: '@Html.GetLabel("lbl_Clnts")',
                             lbl_Pgs: '@Html.GetLabel("lbl_Pgs")',
+                            lbl_Pg: '@Html.GetLabel("lbl_Pg")',
                             lbl_of: '@Html.GetLabel("lbl_of")',
                             lbl_TtlClnts: '@Html.GetLabel("lbl_TtlClnts")',
+                            lbl_Edit: '@Html.GetLabel("lbl_Edit")',
+                            lbl_Delete: '@Html.GetLabel("lbl_Delete")',
 
                             erMsg_InvldEmail: '@Html.GetMessage("erMsg_InvldEmail")',
 
