--- a/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
+++ b/FindMe.Web.Bo/wwwroot/Views/App/Admin/Clients.html
@@ -5,7 +5,7 @@
     <table class="pages col-sm-12 col-xs-12" ng-hide="vm.isBusy">
         <tr>
             <td class="findme-color-fc-pink">
-                <span>{{vm.appProps.lbl_Pgs}}: {{vm.currentPgNmbr + 1}} {{vm.appProps.lbl_of}} {{vm.totalPgs}}</span>
+                <span>{{vm.appProps.lbl_Pg}}: {{vm.currentPgNmbr + 1}} {{vm.appProps.lbl_of}} {{vm.totalPgs}}</span>
                 &nbsp;&nbsp;<b>{{vm.appProps.lbl_TtlClnts}}: {{vm.clientsCount}}</b>
             </td>
         </tr>
@@ -23,51 +23,75 @@
         </tr>
     </table>
 
-    <table class="table table-striped table-hover" ng-init="vm.populateClients()">
-        <thead>
-            <tr>
-                <td>
-                    <b>{{vm.appProps.lbl_Actns}}</b>
-                </td>
-                <td>
-                    <b>{{vm.appProps.lbl_ID}}</b>
-                </td>
-                <td>
-                    <b>{{vm.appProps.lbl_LglName}}</b>
-                </td>
-                <td>
-                    <b>{{vm.appProps.lbl_Name}}</b>
-                </td>
-                <td class="text-center">
-                    <b>{{vm.appProps.lbl_Actv}}</b>
-                </td>
-                <td class="text-center">
-                    <b>{{vm.appProps.lbl_PdClnt}}</b>
-                </td>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="client in vm.clients">
-                <td>
-                    <div></div>
-                </td>
-                <td>
-                    <b>{{client.id}}</b>
-                </td>
-                <td>
-                    <span>{{client.legalName}}</span>
-                </td>
-                <td>
-                    <span>{{client.dispName}}</span>
-                </td>
-                <td class="text-center">
-                    <span class="fa {{client.active ? 'fa-check text-success' : 'fa-times text-danger'}}"></span>
-                </td>
-                <td class="text-center">
-                    <span class="fa {{client.paid ? 'fa-check text-success' : 'fa-times text-danger'}}"></span>
-                </td>
-            </tr>
-        </tbody>
+    <div class="main-table-container">
+        <table class="table table-striped table-hover" ng-init="vm.populateClients()">
+            <thead>
+                <tr>
+                    <td>
+                        <b>{{vm.appProps.lbl_Actns}}</b>
+                    </td>
+                    <td>
+                        <b>{{vm.appProps.lbl_ID}}</b>
+                    </td>
+                    <td>
+                        <b>{{vm.appProps.lbl_LglName}}</b>
+                    </td>
+                    <td>
+                        <b>{{vm.appProps.lbl_Name}}</b>
+                    </td>
+                    <td class="text-center">
+                        <b>{{vm.appProps.lbl_Actv}}</b>
+                    </td>
+                    <td class="text-center">
+                        <b>{{vm.appProps.lbl_PdClnt}}</b>
+                    </td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr ng-repeat="client in vm.clients">
+                    <td>
+                        <div class="btn-toolbar">
+                            <button type="button" class="btn btn-sm btn-findme" title="{{vm.appProps.lbl_Edit}}"><span class="fa fa-edit"></span></button>
+                            <button type="button" class="btn btn-sm btn-findme hollow" title="{{vm.appProps.lbl_Delete}}"><span class="fa fa-times-circle"></span></button>
+                        </div>
+                    </td>
+                    <td>
+                        <b>{{client.id}}</b>
+                    </td>
+                    <td>
+                        <span>{{client.legalName}}</span>
+                    </td>
+                    <td>
+                        <span>{{client.dispName}}</span>
+                    </td>
+                    <td class="text-center">
+                        <span class="fa {{client.active ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+                    </td>
+                    <td class="text-center">
+                        <span class="fa {{client.paid ? 'fa-check text-success' : 'fa-times text-danger'}} fa-2x"></span>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <table class="pages col-sm-12 col-xs-12" ng-hide="vm.isBusy">
+        <tr>
+            <td>
+                <ul class="pagination" ng-repeat="pg in vm.pgsCollection">
+
+                    <li ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '') + ' crsr-pointer'">
+                        <a ng-class="(pg.isActive ? 'active' : '') + ' ' + (pg.disabled ? 'disabled' : '')" ng-click="vm.gotoPage(pg, true)">
+                            <span class="{{pg.icon}}" ng-show="(pg.icon.length > 0)"></span><span>{{pg.text}}</span>
+                        </a>
+                    </li>
+                </ul>
+            </td>
+        </tr>
     </table>
+
+    <br />
+    <br />
+    <br />
 
 </div>
